add new resume section and theming and update footer

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!--[if IE]>
-    	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-
 	<!-- stylesheets -->
 	<link href="stylesheets/style.css" type="text/css" rel="stylesheet" >
 	<link rel="stylesheet" type="text/css" href="styles.css" />
@@ -26,46 +22,19 @@
 	<!-- / page border -->
 
 	<header>
-		<div class="container">
-			<div class="intro">
-				<h1>Adrienne Hodges</h1>
-				<h4>Front End Developer and Designer</h4>
-			</div>
-		</div>
+		<h1>Adrienne Hodges</h1>
+		<h4>Front End Developer and Designer</h4>
 	</header>
 
-	<div id="content" class="container">
-		<div class="row">
-        	<button>
-        		<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">Open PDF of Resume</a>
-        	</button>
-        </div>
-        <!-- 	<div class="category">
-        		<img src="https://unsplash.it/341/239"/>
-        		<div class="cat-info">
-		            <h3 class="cat-title">Alex&Ani</h3>
-		            <p class="cat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum lorem eu ullamcorper molestie. Donec sit amet massa accumsan, molestie urna eget, tristique ipsum. Suspendisse potenti.</p>
-		            <div class="learn-more-button">
-		            	<button>
-		            		<span>See More</span>
-		            	</button>
-		            </div>
-        		</div>
-        	</div> -->
-	</div>
-
-		<!-- <div id="resume" class="project">
-			<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">resume</a>
-		</div>
 		<div id="web" class="project">
 			<a href="web.html"><img src="images/web.png" alt="web" /></a>
 		</div>
 		<div id="logos" class="project">
 			<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
-		</div> -->
+		</div>
 	</div> <!-- / #row_one -->
 
-		<!-- <div class="row">
+		<div class="row">
 			<div id="bison" class="project">
 				<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
 			</div>
@@ -74,10 +43,10 @@
 			</div>
 			<div id="fhc" class="project">
 				<a href="fhc.html"><img src="images/fhc.png" alt="febreze home collection" /></a>
-			</div> -->
+			</div>
 		</div> <!-- / #row_two -->
 
-		<!-- <div class="row">
+		<div class="row">
 			<div id="wedding" class="project">
 				<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
 			</div>
@@ -86,12 +55,20 @@
 			</div>
 			<div id="codepen" class="project">
 				<a href="http://codepen.io/adriennehodges/" target="_blank"><img src="images/codepen.png" alt="codepen" /></a>
-			</div> -->
+			</div>
 		</div> <!-- / #row_three -->
 	</div><!-- / #content -->
 
+
+	<div class="section resume">
+		<h4>Want to learn more?</h4>
+    	<button>
+    		<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">Open PDF of Resume</a>
+    	</button>
+	</div>
+
 	<footer>
-			<p>Copyright Adrienne Hodges 2017</p>	
+			<h6>Copyright Adrienne Hodges 2017</h6>	
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
