add social to footer

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<h4>Front End Developer and Designer</h4>
 	</header>
 
+	<div>
 		<div id="web" class="project">
 			<a href="web.html"><img src="images/web.png" alt="web" /></a>
 		</div>
@@ -68,7 +69,22 @@
 	</div>
 
 	<footer>
-			<h6>Copyright Adrienne Hodges 2017</h6>	
+		<h6>Copyright Adrienne Hodges 2017</h6>
+
+		<div class="social">
+			<ul>
+				<li>
+					<a href="http://codepen.io/adriennehodges/" target="_blank" rel="me" class="footer-codepen" alt="Codepen">
+                    	<span class="icon"></span>
+                    </a>
+				</li>
+				<li>
+					<a href="http://codepen.io/adriennehodges/" target="_blank" rel="me" class="footer-linkedin" alt="LinkedIn">
+                    	<span class="icon"></span>
+                    </a>
+				</li>
+			</ul>
+		</div>
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
