add alex and ani comps page and rough theme

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	</header>
 
 	<div>
+		<div id="aaa" class="project">
+			<a href="aaa.html">Alex & Ani</a>
+		</div>
 		<div id="web" class="project">
 			<a href="web.html"><img src="images/web.png" alt="web" /></a>
 		</div>
