remove aaa content

--- a/index.html
+++ b/index.html
@@ -26,42 +26,29 @@
 		<h4>Front End Developer and Designer</h4>
 	</header>
 
-	<div>
-		<div id="aaa" class="project">
-			<a href="aaa.html">Alex & Ani</a>
-		</div>
-		<div id="web" class="project">
-			<a href="web.html"><img src="images/web.png" alt="web" /></a>
-		</div>
-		<div id="logos" class="project">
-			<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
-		</div>
-	</div> <!-- / #row_one -->
+	<div class="wrapper">
 
-		<div class="row">
-			<div id="bison" class="project">
-				<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
-			</div>
-			<div id="limric" class="project">
-				<a href="limric.html"><img src="images/limric.png" alt="limric" /></a>
-			</div>
-			<div id="fhc" class="project">
-				<a href="fhc.html"><img src="images/fhc.png" alt="febreze home collection" /></a>
-			</div>
-		</div> <!-- / #row_two -->
+		<div id="bison" class="project">
+			<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
+		</div>
+		<div id="limric" class="project">
+			<a href="limric.html"><img src="images/limric.png" alt="limric" /></a>
+		</div>
+		<div id="fhc" class="project">
+			<a href="fhc.html"><img src="images/fhc.png" alt="febreze home collection" /></a>
+		</div>
 
-		<div class="row">
-			<div id="wedding" class="project">
-				<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
-			</div>
-			<div id="green_ion" class="project">
-				<a href="greenion.html"><img src="images/green_ion.png" alt="green ion" /></a>
-			</div>
-			<div id="codepen" class="project">
-				<a href="http://codepen.io/adriennehodges/" target="_blank"><img src="images/codepen.png" alt="codepen" /></a>
-			</div>
-		</div> <!-- / #row_three -->
-	</div><!-- / #content -->
+		<div id="wedding" class="project">
+			<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
+		</div>
+		<div id="green_ion" class="project">
+			<a href="greenion.html"><img src="images/green_ion.png" alt="green ion" /></a>
+		</div>
+		<div id="codepen" class="project">
+			<a href="http://codepen.io/adriennehodges/" target="_blank"><img src="images/codepen.png" alt="codepen" /></a>
+		</div>
+
+	</div>
 
 
 	<div class="section resume">
