working on updating site to include ux work and updated portfolio items

--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Adrienne | Front End Dev and Designer</title>
+	<title>adrienne</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +22,10 @@
 	<!-- / page border -->
 
 	<header>
-		<h1>Adrienne Hodges</h1>
-		<h4>Front End Developer and Designer</h4>
+		<h1>adrienne</h1>
+
+		<h6>hey there, i'm a designer, front end developer, budding ux strategist, and nacho connoisseur.</h6>
+	
 	</header>
 
 	<div class="wrapper">
